--- a/_posts/2023-10-26-23c-sql-domain.md
+++ b/_posts/2023-10-26-23c-sql-domain.md
@@ -4,6 +4,8 @@ title: 23c신기능 - SQL Domains
 date: 2023-10-26 02:00
 categories: 
   - Oracle
+books:
+  - oracle23newfeature
 author: 
 tags: 
    - Oracle
